client/src/components/switchmodes.css
.perspective {
    perspective: 1000px;
}

.canvas-container {
    /* Can style the container her instead of login.jsx */
    width: 600px;
    height: 350px; 
    position: relative;
    transform-style: preserve-3d;
    transition: transform 0.6s;
    border-radius: 5%;
    
}

.back {
    transform: rotateY(180deg);
}

.rotate-y-180 {
    /* this number changes the animation significance */
    transform: rotateY(900deg);
}


.login-button {
    height: 5rem;
    width: 5rem;
    position: fixed;
    z-index: 3;
    left:54%;
    bottom: 3rem;
    transform: translateX(-50%);
    background-color: rgb(137, 90, 59);
    border: none;
    border-radius: 5rem;
    outline: none;
    box-shadow: 0rem 0rem 5rem rgba(0, 0, 0, 0.35);
    cursor: pointer;
    transition: transform, background-color;
    transition-timing-function: ease;
    transition-duration: 400ms;
}

.login-button:hover {
    transform: translateX(-50%) scale(1.04);
}

.login-button:active {
    transform: translateX(-50%) scale(0.96);
}

.login-button .open,
.login-button .close {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%) scale(0.9);
    color: white;
    font-size: 1.75rem;
    opacity: 0;
    transition: transform, opacity;
    transition-timing-function: ease;
    transition-duration: 400ms;
}

button[canvasOn="false"]:hover .open {
    opacity: 1; 
    transform: translate(-50%, -50%) scale(1);
}

button[canvasOn="true"] .close {
    opacity: 1;
    transform: translate(-50%, -50%) scale(1);
}

